[package]
name = "prepixx"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "*", features = ["html_reports"] }

[[bench]]
name = "short_mpm_sim"
harness = false

[dependencies]
env_logger = "0.11.3"
error-iter = "0.4.1"
glam = { version = "0.29.0", features = ["rand"] }
log = "0.4.21"
pixels = "0.13.0"
rand = "0.8.5"
rayon = "1.10.0"
tao = { version = "0.28.0", features = ["rwh_05"] }
