[package]
name = "prepixx"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "*", features = ["html_reports"] }

[[bench]]
name = "short_mpm_sim"
harness = false

[features]
default = ["gpu"]
gpu = []

[dependencies]
bytemuck = "1.21.0"
env_logger = "0.11.3"
error-iter = "0.4.1"
glam = { version = "0.24.2", features = ["bytemuck"], default-features = false }
krnl = "0.1.1"
log = "0.4.21"
pixels = "0.14.0"
rand = "0.8.5"
rayon = "1.10.0"
winit = { version = "0.30.7", features = ["rwh_05"] }

[package.metadata.krnlc.dependencies]
glam = { features = ["bytemuck"], default-features = false }
bytemuck = {}
